--- a/package.json
+++ b/package.json
@@ -2,5 +2,27 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.3"
-  }
+  },
+  "name": "askforvoteserver",
+  "version": "1.0.0",
+  "main": "app.js",
+  "bin": {
+    "askforvoteserver": "bin/www.js"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node ./bin/www.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jiwonsudo/AskForVoteServer.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jiwonsudo/AskForVoteServer/issues"
+  },
+  "homepage": "https://github.com/jiwonsudo/AskForVoteServer#readme",
+  "description": ""
 }
