--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "body-parser": "^1.19.2",
     "ejs": "^3.1.6",
     "express": "^4.17.3"
   },
@@ -9,7 +10,6 @@
   "bin": {
     "askforvoteserver": "bin/www.js"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,7 +21,6 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jiwonsudo/AskForVoteServer/issues",
     "url": "https://github.com/jiwonsudo/AskForVoteServer/issues"
   },
   "homepage": "https://github.com/jiwonsudo/AskForVoteServer#readme",
